Fixed banner size on mobile

--- a/src/styles/components/Banner.css
+++ b/src/styles/components/Banner.css
@@ -20,9 +20,6 @@
         margin-top: 110px !important;
         word-break: break-all;
     }
-    .banner-container{
-        min-height: 750px !important;
-    }
 }
 
 .banner-container{
